# asuka

./: .gitignore  CMakeLists.txt  Dockerfile  FeaturesExtractor.cpp  FeaturesExtractor.h  README.md  extract.cpp  extractProfile.yml  predict.cpp  prepareInput.sh  train.cpp  train.sh  utils.cpp  utils.h  vscode.workspace.code-workspace
webui/: buildCmsViews.sh  config-docker.js  config.js  content.h  predictJson.cpp  predictJson.h  predictui.cpp  runwebui.sh  view_predict.tmpl
