cmake_minimum_required(VERSION 3.0.0)
project(euterpe VERSION 0.1.0)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED True)

include_directories(/usr/local/include/essentia/)
include_directories(/usr/local/include/essentia/scheduler/)
include_directories(/usr/local/include/essentia/streaming/)
include_directories(/usr/local/include/essentia/utils)
include_directories(/usr/include/taglib)
include_directories(/usr/local/include/gaia2)
include_directories(/usr/include/Qt)
include_directories(/usr/include/QtCore)

add_executable(euterpe main.cpp)

link_directories(/usr/local/lib)
target_link_libraries(euterpe essentia)
target_link_libraries(euterpe fftw3)
target_link_libraries(euterpe yaml)
target_link_libraries(euterpe avcodec)
target_link_libraries(euterpe avformat)
target_link_libraries(euterpe avutil)
target_link_libraries(euterpe samplerate)
target_link_libraries(euterpe tag)
target_link_libraries(euterpe fftw3f) 
target_link_libraries(euterpe QtCore) 
target_link_libraries(euterpe gaia2)
