cmake_minimum_required(VERSION 3.0.0)
project(euterpe VERSION 0.1.0)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED True)

include_directories(/usr/local/include/essentia/)
include_directories(/usr/local/include/essentia/scheduler/)
include_directories(/usr/local/include/essentia/streaming/)
include_directories(/usr/local/include/essentia/utils)
include_directories(/usr/include/taglib)
include_directories(/usr/local/include/gaia2)
include_directories(/usr/include/Qt)
include_directories(/usr/include/QtCore)
include_directories(/usr/include/eigen3)

add_executable(extract extract.cpp FeaturesExtractor.cpp)

link_directories(/usr/local/lib)
target_link_libraries(extract essentia)
target_link_libraries(extract fftw3)
target_link_libraries(extract yaml)
target_link_libraries(extract avcodec)
target_link_libraries(extract avformat)
target_link_libraries(extract avutil)
target_link_libraries(extract samplerate)
target_link_libraries(extract tag)
target_link_libraries(extract fftw3f) 
target_link_libraries(extract QtCore) 
target_link_libraries(extract gaia2)
